phone number wrap fixed

--- a/src/styles/blocks/phone-block.scss
+++ b/src/styles/blocks/phone-block.scss
@@ -10,6 +10,7 @@
 
     &:first-child {
       padding-bottom: 16px;
+      white-space: pre;
     }
     &:last-child {
       border-bottom: 1px solid #fff;
